<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />
        
        <TextView
            android:id="@+id/transaksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/_21_film_the_hobbit"
            android:textColor="@color/our_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/price"
            android:layout_alignRight="@+id/price"
            android:text="@string/_20_november_2013"
            android:textSize="12sp" />
        
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="5dp"
            android:text="@string/rp156_000"
            android:textSize="12sp" />

        
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/darker_gray" />

        

    </RelativeLayout>

</LinearLayout>
