<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingActivity" >

    <TextView
        android:id="@+id/settingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/action_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settingLabel"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:text="@string/settings_name" />    

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_below="@+id/nameLabel"
        android:layout_marginTop="40dp"
        android:text="@string/settings_email" />
    
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_below="@+id/emailLabel"
        android:layout_marginTop="40dp"
        android:text="@string/settings_password" />
    
    <TextView
        android:id="@+id/pinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_below="@+id/passwordLabel"
        android:layout_marginTop="40dp"
        android:text="@string/settings_pinNumber" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameLabel"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_alignRight="@+id/settingLabel"
        android:layout_marginBottom="21dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailLabel"
        android:layout_alignRight="@+id/editName"
        android:layout_below="@+id/nameLabel"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordLabel"
        android:layout_alignRight="@+id/editName"
        android:layout_below="@+id/emailLabel"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPinNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pinLabel"
        android:layout_alignRight="@+id/editName"
        android:layout_below="@+id/passwordLabel"
        android:ems="10"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/settings_saveButton" />

    <ImageView
        android:id="@+id/saveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editName"
        android:layout_toRightOf="@+id/editName"
        android:src="@drawable/ic_check_small" />

    <ImageView
        android:id="@+id/cancelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saveName"
        android:layout_toRightOf="@+id/saveName"
        android:src="@drawable/ic_cancel_small" />

    <ImageView
        android:id="@+id/saveEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_toLeftOf="@+id/cancelName"
        android:src="@drawable/ic_check_small" />
    
    <ImageView
        android:id="@+id/cancelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cancelName"
        android:layout_below="@+id/editName"
        android:src="@drawable/ic_cancel_small" />

    <ImageView
        android:id="@+id/savePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editPassword"
        android:layout_toLeftOf="@+id/cancelPassword"
        android:src="@drawable/ic_check_small" />

    <ImageView
        android:id="@+id/cancelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/savePassword"
        android:layout_toRightOf="@+id/saveEmail"
        android:src="@drawable/ic_cancel_small" />

    <ImageView
        android:id="@+id/savePinNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editPinNumber"
        android:layout_toLeftOf="@+id/cancelPinNumber"
        android:src="@drawable/ic_check_small" />

    <ImageView
        android:id="@+id/cancelPinNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cancelPassword"
        android:layout_alignTop="@+id/savePinNumber"
        android:src="@drawable/ic_cancel_small" />
    
</RelativeLayout>